# rag_project

./: .gitignore  README.md  agente_erp_doctype.py  documenta_erp_nicegui.py  documenta_erp_nicegui1.py  documenta_erp_nicegui2.py  documenta_erp_nicegui3.py  documenta_erp_nicegui4.py  documenta_erp_nicegui5.py  documentador_erp.py  main.py  pyproject.toml
