[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "llama-index>=0.14.18",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-readers-file>=0.6.0",
    "llama-index-readers-json>=0.5.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "nicegui>=3.9.0",
    "streamlit>=1.55.0",
]
